# pyfabricconnect

./: .gitignore  LICENSE  README.md  __init__.py  client.py  pyproject.toml
auth/: __init__.py
connectors/: jdbc.py  odbc.py
core/: exceptions.py
examples/: jdbc_example.py  odbc_example.py  sqlalchemy_example.py
pyfabricconnect/: client.py
pyfabricconnect/auth/: service_principal.py
pyfabricconnect/connectors/: jdbc.py  odbc.py  sqlalchemy.py
tests/: test_client.py
