[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfabricconnect"
version = "0.1.0"
description = "Unified Python connectivity toolkit for Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "Eduardo Osorio Venegas" }
]

keywords = [
    "microsoft-fabric",
    "fabric",
    "jdbc",
    "odbc",
    "sqlalchemy",
    "spark",
    "warehouse",
    "lakehouse",
    "data-engineering",
    "pyspark",
    "azure"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pandas>=2.0.0",
    "pyodbc>=5.0.0",
    "sqlalchemy>=2.0.0",
    "azure-identity>=1.15.0"
]

[project.optional-dependencies]

spark = [
    "pyspark>=3.5.0"
]

dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "build>=1.2.0",
    "twine>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/eosovngas/pyfabricconnect"
Repository = "https://github.com/eosovngas/pyfabricconnect"
Issues = "https://github.com/eosovngas/pyfabricconnect/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]